set blog posts to open in new tab

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                     <ul>
                       <li><i class="fa fa-folder-open"></i> Blog Posts
                         <ul style="padding:0;">
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/docker-icon.png" /> <a href="/blog/?post=docker-scout-image-security">Maintaining Docker Image Security With Docker Scout</a> <span>- Nov 25, 2024</span>
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/ai-icon.png" /> <a href="/blog/?post=pixel-ai-companion">Pixel - Your Tiny, Offline AI Assistant</a> <span>- Aug 21, 2024</span>
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a href="/blog/?post=oracle-oci-flappy-bird">Deploying Flappy Bird To OCI With 3 Short Commands</a> <span>- Jun 8, 2024</span>
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/terraform-icon.png" /> <a href="/blog/?post=terraform-nodejs-oci-aws">Terraforming An Application Onto OCI And AWS</a> <span>- Dec 8, 2023</span>
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a href="/blog/?post=oracle-advanced-queue-flappy-bird">Express, TypeScript, And Oracle Advanced Queue</a> <span>- Nov 25, 2023</span>
-                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a href="/blog/?post=json-relational-duality-oracle-flappy-bird">Full Stack JavaScript App Utilizing JSON-Relational Duality Views</a> <span>- Nov 15, 2023</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/docker-icon.png" /> <a target="_blank" href="/blog/?post=docker-scout-image-security">Maintaining Docker Image Security With Docker Scout</a> <span>- Nov 25, 2024</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/ai-icon.png" /> <a target="_blank" href="/blog/?post=pixel-ai-companion">Pixel - Your Tiny, Offline AI Assistant</a> <span>- Aug 21, 2024</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a target="_blank" href="/blog/?post=oracle-oci-flappy-bird">Deploying Flappy Bird To OCI With 3 Short Commands</a> <span>- Jun 8, 2024</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/terraform-icon.png" /> <a target="_blank" href="/blog/?post=terraform-nodejs-oci-aws">Terraforming An Application Onto OCI And AWS</a> <span>- Dec 8, 2023</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a target="_blank" href="/blog/?post=oracle-advanced-queue-flappy-bird">Express, TypeScript, And Oracle Advanced Queue</a> <span>- Nov 25, 2023</span>
+                            <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a target="_blank" href="/blog/?post=json-relational-duality-oracle-flappy-bird">Full Stack JavaScript App Utilizing JSON-Relational Duality Views</a> <span>- Nov 15, 2023</span>
                         </ul>
                       </li>
                     </ul>
