add new article link to blog tab

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <ul>
                       <li><i class="fa fa-folder-open"></i> Blog Posts
                         <ul style="padding:0;">
+                            <li><img class="blog-icon" src="/img/blog/gitlab-icon.png" /> <a target="_blank" href="/blog/?post=gitlab-terraform-proxmox-k8s">Deploying A Kubernetes Cluster To PVE Using GitLab CI Scout</a> <span>- Mar 3, 2025</span>
                             <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/docker-icon.png" /> <a target="_blank" href="/blog/?post=docker-scout-image-security">Maintaining Docker Image Security With Docker Scout</a> <span>- Nov 25, 2024</span>
                             <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/ai-icon.png" /> <a target="_blank" href="/blog/?post=pixel-ai-companion">Pixel - Your Tiny, Offline AI Assistant</a> <span>- Aug 21, 2024</span>
                             <li><!--<i class="fa fa-file"></i>--><img class="blog-icon" src="/img/blog/flappy-bird-icon.png" /> <a target="_blank" href="/blog/?post=oracle-oci-flappy-bird">Deploying Flappy Bird To OCI With 3 Short Commands</a> <span>- Jun 8, 2024</span>
