--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <div class="innerscreen">
             <p id="finalline" class="font">
                 <span class="prompt">root@miketoscano.com:~$</span><span> 
-                    sh ~/games/
-                    <select id="gameSelect" class="font" style="border:none;background:transparent;padding:0;margin:0;position:relative;left:-8px;cursor:pointer;">
+                    sh ~/games/<select id="gameSelect" class="font" style="border:none;background:transparent;padding:0;margin:0;position:relative;cursor:pointer;">
                         <option value="flappy">Flappy Bird</option>
                         <option value="snake">Snake</option>
                         <option value="pacman">Pacman</option>
